; ModuleID = '/home/carl/AnghaBench/tig/src/extr_io.c_io_kill.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_io.c_io_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io = type { i64 }

@SIGKILL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @io_kill(%struct.io* %0) #0 {
  %2 = alloca %struct.io*, align 8
  store %struct.io* %0, %struct.io** %2, align 8
  %3 = load %struct.io*, %struct.io** %2, align 8
  %4 = getelementptr inbounds %struct.io, %struct.io* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %14, label %7

7:                                                ; preds = %1
  %8 = load %struct.io*, %struct.io** %2, align 8
  %9 = getelementptr inbounds %struct.io, %struct.io* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* @SIGKILL, align 4
  %12 = call i32 @kill(i64 %10, i32 %11)
  %13 = icmp ne i32 %12, -1
  br label %14

14:                                               ; preds = %7, %1
  %15 = phi i1 [ true, %1 ], [ %13, %7 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i32 @kill(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
